--- a/jetMeasurements.tex
+++ b/jetMeasurements.tex
@@ -18,7 +18,7 @@ Figure~\ref{fig:xJ} shows the $x_J$ distribution for dijet pairs in \pp\ and \pb
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{figures/jetMeasurements/xJ}
-\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.4$ jets as a function of $x_J$ for \pp\ (blue) and \pbpb\ (red) collisions. The different panels are for (top) central and (bottom) peripheral collisions in (left) $100 < \pt_1 < 126$ GeV and (right) $\pt_1 > 200 $ GeV. The \pp\ data is the same in all panels. The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties. Figures taken from \cite{Aaboud:2017eww}}
+\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.4$ jets as a function of $x_J$ for \pp\ (blue) and \pbpb\ (red) collisions. The different panels are for (top) central and (bottom) peripheral collisions in (left) $100 < \pt_1 < 126$ GeV and (right) $\pt_1 > 200 $ GeV. The \pp\ data is the same in all panels. The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties. Figures taken from \cite{Aaboud:2017eww}.}
 \label{fig:xJ}
 \end{center}
 \end{figure}
@@ -28,7 +28,7 @@ Further measurements of $R = 0.3$ jets are shown in Figure~\ref{fig:xJ_R03}. The
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{figures/jetMeasurements/xJ_R03}
-\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.3$ jets as a function of $x_J$ in \pp\ and central \pbpb\ collisions. The different panels are for different, $\pt_1$ ranges (top left to bottom right) central and (bottom) peripheral collisions. The \pbpb\ data is in red circles while the \pp\ data is in blue diamonds and is the same in all panels. The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties. Figures taken from \cite{Aaboud:2017eww}}
+\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.3$ jets as a function of $x_J$ in \pp\ and central \pbpb\ collisions. The different panels are for different, $\pt_1$ ranges (top left to bottom right) central and (bottom) peripheral collisions. The \pbpb\ data is in red circles while the \pp\ data is in blue diamonds and is the same in all panels. The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties. Figures taken from \cite{Aaboud:2017eww}.}
 \label{fig:xJ_R03}
 \end{center}
 \end{figure}
@@ -52,7 +52,7 @@ This measurement was conducted for jets in the 40--1000 GeV range in different r
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.85\textwidth]{figures/jetMeasurements/jetYields}
-\caption{(Left) The inclusive jet cross section in \pp\ collisions as a function of jet \pt\ in different $|y|$ intervals scaled by successive powers of $10^2$ for visibility. (Right) Per event inclusive jet yield in \pbpb\ collisions normalized by $\langle \TAA \rangle$ as a function of jet \pt\ in different centrality intervals scaled by successive powers of $10^2$ for visibility. The solid lines represent the cross section from \pp\ data at the same rapidity interval scaled by the same $10^2$ factor.  Figure taken from \cite{2019108}}
+\caption{(Left) The inclusive jet cross section in \pp\ collisions as a function of jet \pt\ in different $|y|$ intervals scaled by successive powers of $10^2$ for visibility. (Right) Per event inclusive jet yield in \pbpb\ collisions normalized by $\langle \TAA \rangle$ as a function of jet \pt\ in different centrality intervals scaled by successive powers of $10^2$ for visibility. The solid lines represent the cross section from \pp\ data at the same rapidity interval scaled by the same $10^2$ factor.  Figure taken from \cite{2019108}.}
 \label{fig:jet_yields}
 \end{center}
 \end{figure}
@@ -63,7 +63,7 @@ Figure~\ref{fig:raa} shows the measured inclusive jet \RAA\ as a function of jet
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{figures/jetMeasurements/raa}
-\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$. The error bars represent statistical uncertainties while the the shaded boxes represent systematic uncertainties. Figure taken from \cite{2019108}}
+\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{2019108}.}
 \label{fig:raa}
 \end{center}
 \end{figure}
@@ -73,7 +73,7 @@ The smooth centrality dependence can be more clearly seen in Figure~\ref{fig:raa
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=0.55\textwidth]{figures/jetMeasurements/raa_centDep}
-\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$. The error bars represent statistical uncertainties while the the shaded boxes represent systematic uncertainties. Figure taken from \cite{2019108}}
+\caption{The \RAA\ distributions as a function of jet \pt\ for different centrality bins and jet rapidity $|y| < 2.8$. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{2019108}.}
 \label{fig:raa_centDep}
 \end{center}
 \end{figure}
@@ -95,13 +95,73 @@ The smooth centrality dependence can be more clearly seen in Figure~\ref{fig:raa
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Jet Fragmentation}
 \label{sec:jet_ff}
-\cite{PhysRevC.98.024908}
+This discussion is based on the measurement described in \cite{PhysRevC.98.024908}. While measurements like \RAA \cite{} and asymmetry \cite{} describe how much energy is lost by the jet, fragmentation measurements describe the momentum distribution of particles associated to the jet. These can be described as:
+
+\begin{align}
+\Dz = \frac{1}{\Njet} \frac{d\nch}{dz} \\
+\Dpt = \frac{1}{\Njet} \frac{d\nch}{d\pt}
+\end{align}
+where $z = \pt \cos(\Delta R / \ptjet)$ and gives the charged-particle longitudinal momentum fraction relative to the jet. Modifications to the fragmentation functions in \pbpb\ collisions can be evaluated by constructing the ratios: 
+
+\begin{align}
+\Rdz = \frac{\Dz_{\pbpb}}{\Dz_{\pp}} \\
+\Rdpt = \frac{\Dpt_{\pbpb}}{\Dpt_{\pp}} 
+\end{align}
+This measurement is corrected for detector effects and unfolded to the particle level. This allows for comparisons to other measurements and theoretical models. The \Dz\ and \Dpt\ distributions are shown in Figure~\ref{fig:jetff_dz} and Figure~\ref{fig:jetff_dpt} 
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/jetff_dpt}
+\caption{(Left) The \Dpt\ distributions in \pp\ as a function of charged-particle \pt\ for different \ptjet\ selections and for jet rapidity $|y| < 2.1$. (Right) The \Dpt\ distributions in \pbpb\ as a function of charged-particle \pt\ for different centrality selections and for jet rapidity $|y| < 2.1$. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{PhysRevC.98.024908}.}
+\label{fig:jetff_dpt}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/jetff_rdz}
+\caption{The modifications to the \Dz\ distributions in \pbpb\ compared to \pp\ as a function of charged-particle $z$ for different \ptjet\ selections (left to right) and different centrality selections (top to bottom) for jet rapidity $|y| < 0.3$. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{PhysRevC.98.024908}.}
+\label{fig:jetff_rdz}
+\end{center}
+\end{figure}
+
+The modifications to the \Dz\ distributions are shown in Figure~\ref{fig:jetff_rdz}. It can be seen that there is an excess of particles with low $z$ and high $z$. These are particles that carry either a small or a large fraction of energy of the jet \pt. There is an associated depletion for particles with intermediate $z$. These modifications become smaller for more peripheral collisions. The \ptjet\ dependence of the \Rdz\ and \Rdpt\ distributions can be seen in Figure~\ref{fig:jetff_jetpt_dep}. This dependence can give insight into the modification of the fragmentation functions, with any scaling with $z$ indicating a change in the fragmentation pattern, while a scaling with \pt\ reflecting an effect from the medium itself. The low momentum excess in the \Rdpt\ distributions seen in Figure~\ref{fig:jetff_jetpt_dep} can be further studied by integrating over that region. Then the extra number of particles in \pbpb\ compared to \pp\ is given by:
+
+\begin{align}
+\Nch = \int^{\pt_{\mathrm{max}}}_{\pt_{\mathrm{min}}} \left( \Dpt_{\pbpb} - \Dpt_{\pp} \right) d\pt
+\end{align}
+where $\pt_{\mathrm{min}} = 1$ GeV and $\pt_{\mathrm{max}} = 4.2$ GeV. The \Nch\ distributions can be seen in Figure~\ref{fig:jetff_nch}. It can be clearly seen that the size of the excess increases as a function of \ptjet, growing from about 1.5 to 2.5 extra particles in the most central \pbpb\ collisions. This excess is even seen in the peripheral \pbpb\ collisions, though it is a lot smaller and ranges from 0.2 to 0.5 extra particles. 
 
 
 
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{figures/jetMeasurements/jetff_jetpt_dep}
+\caption{The \ptjet\ dependence of the \Rdz\ (left) and \Rdpt\ (right) distributions in 0--10\% central \pbpb\ compared to \pp\ collisions. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{PhysRevC.98.024908}.}
+\label{fig:jetff_jetpt_dep}
+\end{center}
+\end{figure}
 
 
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.35\textwidth]{figures/jetMeasurements/jetff_nch}
+\caption{The number of extra particles that carry $1<\pt<4$ GeV  in \pbpb\ compared to \pp. The different colors represent different centrality selections. The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{PhysRevC.98.024908}.}
+\label{fig:jetff_nch}
+\end{center}
+\end{figure}
 
+The modifications to the \Dz\ distributions have also been compared to a variety of models, including the Effective Quenching model \cite{Spousta:2015fca}, the Soft Collinear Effective Theory \cite{Chien:2015vja, Kang:2017frl}, and the Hybrid Model \cite{Casalderrey-Solana:2014bpa}. These comparisons are shown in Figure~\ref{fig:jetff_rdz_theory}. It can be seen that 
+
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.75\textwidth]{figures/jetMeasurements/jetff_rdz_theory}
+\caption{The \Rdz\ distributions compared to the EQ and Hybrid models (left) and SCET (right). The error bars represent statistical uncertainties while the shaded boxes represent systematic uncertainties. Figure taken from \cite{PhysRevC.98.024908}.}
+\label{fig:jetff_rdz_theory}
+\end{center}
+\end{figure}
 
 
 
