--- a/qgp.tex
+++ b/qgp.tex
@@ -1,15 +1,31 @@
 % !TEX root = thesis-ex.tex
-Extreme conditions of temperature and pressure like those in relativistic heavy ion collisions lead to the formation of the Quark Gluon Plasma \cite{SHURYAK198071}. It is believed to have filled the early universe a few microseconds after the Big Bang and might be present in the cores of extremely compact objects like neutron stars \cite{PhysRevLett.34.1353, Linde_1979}. The phase transition between the free quarks and gluons within the QGP and the confined quarks and gluons within hadrons can be seen in Figure~\ref{fig:qcd_phase}.  
-
+The quark-gluon plasma is a state of matter that comprises of free partons and is formed in extreme conditions of temperature and pressure \cite{SHURYAK198071}.
+Its study is motivated by the fact that is the only way to access the dynamics of partons that are otherwise confined within hadrons. Moreover, its thermodynamic properties are
+of particular interest since it filled the early universe a few microseconds after the Big Bang \cite{PhysRevLett.34.1353}.
+The QGP also forms the core of neutron-stars \cite{Linde_1979} and the recent detection of gravitational waves from a neutron-star merger \cite{PhysRevLett.119.161101} has opened new avenues 
+of investigation \cite{Han:2018mtj, PhysRevD.99.023009, PhysRevLett.122.061101}. These studies have the potential to provide information into the nuclear equation of state since the dynamics of the 
+merger are sensitive to the behavior of extremely dense nuclear matter \cite{PhysRevD.86.063001}. The increase in temperatures and density during the merger results in different 
+pre- and post-merger signals of gravitational-waves that suggest a signature of a first-order hadron-quark phase transition at extreme densities \cite{PhysRevLett.122.061102}. Colliders 
+like RHIC and the LHC on the other hand probe regions that have comparitively low baryon densities. Lattice QCD calculations in these regions show that the transition between a hadronic gas and the QGP occurs 
+at a temperature of approximately 160 MeV and corresponds to an energy density of 0.5 GeV/fm$^3$ \cite{Borsanyi:2010bp}. This is a smooth crossover that spans a 20--30 MeV temperature range, and can 
+be seen in the QCD phase diagram shown in Figure~\ref{fig:qcd_phase}. This phase diagram shows the transition between free quarks and gluons within the QGP and the confined quarks and gluons 
+within hadrons, as a function of temperature $T$ and baryon chemical potential $\mu$.
+% matter and had   at $\mu = 0$ is applicable \cite{Aoki:2006we}.. 
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=0.85\textwidth]{figures/theory/qcd_phase}
-\caption{The QCD phase diagram of nuclear matter. Figure from from Reference~\cite{PhysRevD.72.034004}. }
+\includegraphics[width=0.45\textwidth]{figures/theory/qcd_phase}
+\caption{The QCD phase diagram of nuclear matter as a function of temperature $T$ and baryon chemical potential $\mu$. The n-$\star$ denotes a neutron star. Figure from from Ref.~\cite{Kronfeld:2012uk}. }
 \label{fig:qcd_phase}
 \end{center}
 \end{figure}
 
-This state of matter exists for 1-10 fm/c, depending on the collision energy, above $\lambda_{\mathrm{QCD}} = 200$ MeV, the fundamental energy scale in QCD. Thermal photons from the QGP reveal that it reaches temperatures of 300--600 MeV in central collisions at 200 GeV \cite{PhysRevLett.104.132301} and 2.76 TeV \cite{2016235}, showing very little collision energy dependence. Further, the chemical freeze-out temperature was found to be 160 MeV via measurements of ratios of final state hadrons containing the light $u, d$ quarks \cite{Fodor_2004, ADAMS2005102, PhysRevC.93.024917} with the thermal freeze-out being 100--150 MeV \cite{PhysRevC.69.024904, PhysRevC.72.014908, PhysRevC.75.024910, PhysRevC.88.044910}. These measurements paint a picture of the QGP being formed early in the heavy ion collision. It has a non-uniform energy density and temperature determined by the 'colliding nuclei and collision energy. The QGP then cools and expands as described by relativistic hydrodynamics, and as its temperature falls below 160 MeV, it experiences a crossover phase transition and hadronizes. This system continues to cool and expand, until at 95 GeV there is a thermal freeze-out. 
+When formed in a heavy ion collision, this state of matter exists for 1-10 fm/c, depending on the collision energy \cite{doi:10.1146/annurev.nucl.46.1.71}. Thermal photons from the QGP reveal that 
+it reaches temperatures of 300--600 MeV in central collisions at 200 GeV \cite{PhysRevLett.104.132301} and 2.76 TeV \cite{2016235}, showing very little collision energy dependence. As the QGP 
+cools via expansion, its temperature drops below the critical temperature of QCD phase transitions and it forms a hadron gas. This process, referred to as a chemical freeze-out, occurs at about
+160 MeV \cite{Fodor_2004, ADAMS2005102, PhysRevC.93.024917}. The hadrons formed in this stage continue to interact with each other, but have energies below the threshold for inelastic 
+particle production, resulting mainly in modifications to their momentum spectra. This continues till the medium cools further and reaches what is called a thermal freeze-out at 100--150 MeV \cite{PhysRevC.69.024904, PhysRevC.72.014908, PhysRevC.75.024910, PhysRevC.88.044910}.
+
+%These measurements paint a picture of the QGP being formed early in the heavy ion collision. It has a non-uniform energy density and temperature determined by the colliding nuclei and collision energy. The QGP then cools and expands as described by relativistic hydrodynamics, and as its temperature falls below 160 MeV, it experiences a crossover phase transition and hadronizes. This system continues to cool and expand, until at 95 GeV there is a thermal freeze-out. 
 
 
 
@@ -42,7 +58,13 @@ This state of matter exists for 1-10 fm/c, depending on the collision energy, ab
 %\end{align}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The QGP was initially thought to be a weakly coupled parton gas because of asymptotic freedom from QCD. The highly energetic collisions such as those at the LHC would imply a weak interaction between the quarks and gluons that make up the plasma. This would result in rare scatterings between the constituents of the gas and wash out any spatial anisotropies based on the collision geometry. On the other hand, a strong coupling within the QGP would result in the pressure gradients in the medium being driven by hydrodynamics and spatial anisotropies would be transformed to momentum anisotropies in the particles produced as shown in Figure~\ref{fig:overlap}. In this picture, the non-uniform structure of the colliding nuclei would cause a momentum anisotropy that would be further enhanced when looking at collisions that are less central and do not have perfect overlap between the colliding nuclei. These observations were seen in azimuthal correlation measurements implying that the medium is indeed strongly coupled \cite{Aaboud:2018ves, PhysRevLett.91.182301, Sirunyan:2017fts, PhysRevLett.116.132302}. 
+The QGP was initially thought to be a weakly coupled parton gas because of asymptotic freedom from QCD \cite{PhysRevLett.34.1353}. The highly energetic collisions such as those at the LHC would 
+imply a weak interaction between the partons that make up the plasma. This would result in rare scatterings between the constituents of the gas, washing out any spatial anisotropies based 
+on ``'lumpy''-ness of the colliding nuclei or the collision geometry. On the other hand, a strong coupling within the QGP would result in the pressure gradients in the medium being driven by 
+hydrodynamics and spatial anisotropies would be transformed to momentum anisotropies in the particles produced as shown in Figure~\ref{fig:overlap} \cite{Busza:2018rrf}. 
+In this picture, the non-uniform structure of the colliding nuclei would cause a momentum anisotropy \cite{Ster:1999ib} that would be further enhanced when looking at collisions that are less central and do not 
+have perfect overlap between the colliding nuclei \cite{Poskanzer:1999ea, Pinkenburg:1999ya}. These observations were seen in azimuthal correlation measurements implying that the medium is indeed strongly 
+coupled \cite{Aaboud:2018ves, PhysRevLett.91.182301, Sirunyan:2017fts, PhysRevLett.116.132302}. 
 
 \begin{figure}[htbp]
 \begin{center}
@@ -57,10 +79,13 @@ The QGP was initially thought to be a weakly coupled parton gas because of asymp
 A Fourier Transform of the angular distribution of charged hadrons in the collision debris can quantify these momentum anisotropies and give the anisotropic flow coefficients $v_n$, defined as \cite{Poskanzer:1998yz}:
 
 \begin{align}
-\frac{d\bar{N}}{d\phi} = \frac{\bar{N}}{2\pi} \left( 1 + 2 \sum_{n=1}^{\infty} v_{n} \cos(n(\phi-\bar{\Psi}_n)) \right)
+\frac{d\bar{N}}{d\phi} = \frac{N}{2\pi} \left( 1 + 2 \sum_{n=1}^{\infty} v_{n} \cos(n(\phi-\Psi_n)) \right)
 \end{align}
 
-where $\phi$ is the angle in the transverse plane, $\bar{\Psi}_n$ are the event plane angles, and $\bar{N}$ is the average number of particles per event. Some of these coefficients are shown in Figure~\ref{fig:flow_coeff}. The measured anisotropies can be used to constrain the specific viscosity given by the ratio of viscosity to entropy density, $\eta / s$, and have shown that the QGP has a $\eta / s$ of near the theoretical minimum of $1/4\pi$ \cite{Heinz:2013th}.
+where $\phi$ is the angle in the transverse plane, $\Psi_n$ are the event plane angles, and $N$ is the average number of particles per event. Some of these coefficients are shown in 
+Figure~\ref{fig:flow_coeff}. The measured anisotropies can be used to constrain the specific viscosity given by the ratio of viscosity to entropy density, $\eta / s$, and have shown that 
+the QGP has a $\eta / s$ of near the theoretical minimum of $1/4\pi$ \cite{Heinz:2013th}. The azimuthal correlations that are a result of flow also provide information about the relativistic 
+hydrodynamic nature of the medium. 
 
 
 \begin{figure}[htbp]
