--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,537 @@
 % !TEX root = thesis-ex.tex
+@article{Pinkenburg:1999ya,
+      author         = "Pinkenburg, C. and others",
+      title          = "{Elliptic flow: Transition from out-of-plane to in-plane
+                        emission in Au + Au collisions}",
+      collaboration  = "E895",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "83",
+      year           = "1999",
+      pages          = "1295-1298",
+      doi            = "10.1103/PhysRevLett.83.1295",
+      eprint         = "nucl-ex/9903010",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/9903010;%%"
+}
+
+@article{Ster:1999ib,
+      author         = "Ster, Andras and Csorgo, Tamas and Lorstad, Bengt",
+      title          = "{The Reconstructed final state of Pb + Pb 158-GeV/A
+                        reactions from spectra and correlation data of NA49, NA44
+                        and WA98}",
+      booktitle      = "{Quark matter '99. Proceedings, 14th International
+                        Conference on ultrarelativistic nucleus nucleus
+                        collisions, QM'99, Torino, Italy, May 10-15, 1999}",
+      journal        = "Nucl. Phys.",
+      volume         = "A661",
+      year           = "1999",
+      pages          = "419-422",
+      doi            = "10.1016/S0375-9474(99)85055-6",
+      eprint         = "hep-ph/9907338",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/9907338;%%"
+}
+
+
+@article{Poskanzer:1999ea,
+      author         = "Poskanzer, Arthur M. and others",
+      title          = "{Centrality dependence of directed and elliptic flow at
+                        the SPS}",
+      booktitle      = "{Quark matter '99. Proceedings, 14th International
+                        Conference on ultrarelativistic nucleus nucleus
+                        collisions, QM'99, Torino, Italy, May 10-15, 1999}",
+      collaboration  = "NA49",
+      journal        = "Nucl. Phys.",
+      volume         = "A661",
+      year           = "1999",
+      pages          = "341-344",
+      doi            = "10.1016/S0375-9474(99)85036-2",
+      eprint         = "nucl-ex/9906013",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "LBL-43574, LBNL-43574",
+      SLACcitation   = "%%CITATION = NUCL-EX/9906013;%%"
+}
+
+@article{PhysRevLett.80.4136,
+  title = {Directed and Elliptic Flow in 158 GeV/Nucleon $Pb+Pb$ Collisions},
+  author = "{NA49 Collaboration}",
+  collaboration = {NA49 Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {80},
+  issue = {19},
+  pages = {4136--4140},
+  numpages = {0},
+  year = {1998},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.80.4136},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.80.4136}
+}
+
+
+
+@article{PhysRevC.92.011901,
+  title = {Alternative ansatz to wounded nucleon and binary collision scaling in high-energy nuclear collisions},
+  author = {Moreland, J. Scott and Bernhard, Jonah E. and Bass, Steffen A.},
+  journal = {Phys. Rev. C},
+  volume = {92},
+  issue = {1},
+  pages = {011901},
+  numpages = {6},
+  year = {2015},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.92.011901},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.92.011901}
+}
+
+@article{BAYM1976241,
+title = "Can a neutron star be a giant MIT bag?",
+journal = "Physics Letters B",
+volume = "62",
+number = "2",
+pages = "241 - 244",
+year = "1976",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(76)90517-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269376905177",
+author = "G. Baym and S.A. Chin",
+}
+
+@article{doi:10.1146/annurev.nucl.46.1.71,
+author = {Harris, John W. and Muller, Berndt},
+title = {The search for the quark-gluon plasma},
+journal = {Annual Review of Nuclear and Particle Science},
+volume = {46},
+number = {1},
+pages = {71-107},
+year = {1996},
+doi = {10.1146/annurev.nucl.46.1.71},
+URL = {https://doi.org/10.1146/annurev.nucl.46.1.71},
+eprint = {https://doi.org/10.1146/annurev.nucl.46.1.71},
+}
+
+
+
+@article{Borsanyi:2010bp,
+      author         = "Borsanyi, Szabolcs and Fodor, Zoltan and Hoelbling,
+                        Christian and Katz, Sandor D and Krieg, Stefan and Ratti,
+                        Claudia and Szabo, Kalman K.",
+      title          = "{Is there still any $T_c$ mystery in lattice QCD? Results
+                        with physical masses in the continuum limit III}",
+      collaboration  = "Wuppertal-Budapest",
+      journal        = "JHEP",
+      volume         = "09",
+      year           = "2010",
+      pages          = "073",
+      doi            = "10.1007/JHEP09(2010)073",
+      eprint         = "1005.3508",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "WUB-10-11, MIT-CTP-4152",
+      SLACcitation   = "%%CITATION = ARXIV:1005.3508;%%"
+}
+
+@article{Aoki:2006we,
+      author         = "Aoki, Y. and Endrodi, G. and Fodor, Z. and Katz, S. D.
+                        and Szabo, K. K.",
+      title          = "{The Order of the quantum chromodynamics transition
+                        predicted by the standard model of particle physics}",
+      journal        = "Nature",
+      volume         = "443",
+      year           = "2006",
+      pages          = "675-678",
+      doi            = "10.1038/nature05120",
+      eprint         = "hep-lat/0611014",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = HEP-LAT/0611014;%%"
+}
+
+@article{Kronfeld:2012uk,
+      author         = "Kronfeld, Andreas S.",
+      title          = "{Twenty-first Century Lattice Gauge Theory: Results from
+                        the QCD Lagrangian}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "62",
+      year           = "2012",
+      pages          = "265-284",
+      doi            = "10.1146/annurev-nucl-102711-094942",
+      eprint         = "1203.1204",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "FERMILAB-PUB-12-064-T",
+      SLACcitation   = "%%CITATION = ARXIV:1203.1204;%%"
+}
+
+@article{PhysRevD.86.063001,
+  title = {Equation-of-state dependence of the gravitational-wave signal from the ring-down phase of neutron-star mergers},
+  author = {Bauswein, A. and Janka, H.-T. and Hebeler, K. and Schwenk, A.},
+  journal = {Phys. Rev. D},
+  volume = {86},
+  issue = {6},
+  pages = {063001},
+  numpages = {29},
+  year = {2012},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.86.063001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.86.063001}
+}
+
+@article{PhysRevLett.108.011101,
+  title = {Measuring Neutron-Star Properties via Gravitational Waves from Neutron-Star Mergers},
+  author = {Bauswein, A. and Janka, H.-T.},
+  journal = {Phys. Rev. Lett.},
+  volume = {108},
+  issue = {1},
+  pages = {011101},
+  numpages = {5},
+  year = {2012},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.108.011101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.108.011101}
+}
+
+@article{PhysRevD.99.023009,
+  title = {Signals in the tidal deformability for phase transitions in compact stars with constraints from GW170817},
+  author = {Christian, Jan-Erik and Zacchi, Andreas and Schaffner-Bielich, J\"urgen},
+  journal = {Phys. Rev. D},
+  volume = {99},
+  issue = {2},
+  pages = {023009},
+  numpages = {8},
+  year = {2019},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.99.023009},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.99.023009}
+}
+
+
+@article{Han:2018mtj,
+      author         = "Han, Sophia and Steiner, Andrew W.",
+      title          = "{Tidal deformability with sharp phase transitions in
+                        (binary) neutron stars}",
+      journal        = "Phys. Rev.",
+      volume         = "D99",
+      year           = "2019",
+      number         = "8",
+      pages          = "083014",
+      doi            = "10.1103/PhysRevD.99.083014",
+      eprint         = "1810.10967",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1810.10967;%%"
+}
+
+
+@article{PhysRevLett.119.161101,
+  title = {GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral},
+  author = "{LIGO/VIRGO Collaboration}", 
+  collaboration = {LIGO Scientific Collaboration and Virgo Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {119},
+  issue = {16},
+  pages = {161101},
+  numpages = {18},
+  year = {2017},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.119.161101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.119.161101}
+}
+
+
+@article{PhysRevLett.122.061102,
+  title = {Identifying a First-Order Phase Transition in Neutron-Star Mergers through Gravitational Waves},
+  author = {Bauswein, Andreas and Bastian, Niels-Uwe F. and Blaschke, David B. and Chatziioannou, Katerina and Clark, James A. and Fischer, Tobias and Oertel, Micaela},
+  journal = {Phys. Rev. Lett.},
+  volume = {122},
+  issue = {6},
+  pages = {061102},
+  numpages = {8},
+  year = {2019},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.122.061102},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.122.061102}
+}
+@article{Bauswein:2018bma,
+      author         = "Bauswein, Andreas and Bastian, Niels-Uwe F. and Blaschke,
+                        David B. and Chatziioannou, Katerina and Clark, James A.
+                        and Fischer, Tobias and Oertel, Micaela",
+      title          = "{Identifying a first-order phase transition in neutron
+                        star mergers through gravitational waves}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "122",
+      year           = "2019",
+      number         = "6",
+      pages          = "061102",
+      doi            = "10.1103/PhysRevLett.122.061102",
+      eprint         = "1809.01116",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1809.01116;%%",
+}
+
+@article{PhysRevLett.122.061101, 
+  title = {Signatures of Quark-Hadron Phase Transitions in General-Relativistic Neutron-Star Mergers},
+  author = {Most, Elias R. and Papenfort, L. Jens and Dexheimer, Veronica and Hanauske, Matthias and Schramm, Stefan and St\"ocker, Horst and Rezzolla, Luciano},
+  journal = {Phys. Rev. Lett.},
+  volume = {122},
+  issue = {6},
+  pages = {061101},
+  numpages = {6},
+  year = {2019},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.122.061101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.122.061101}
+}
+
+@article{PhysRevD.57.2603,
+  title = {Casimir scaling from center vortices: Towards an understanding of the adjoint string tension},
+  author = {Faber, M. and Greensite, J. and OlejnkS},
+  journal = {Phys. Rev. D},
+  volume = {57},
+  issue = {4},
+  pages = {2603--2609},
+  numpages = {0},
+  year = {1998},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.57.2603},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.57.2603},
+}
+
+@article{PhysRevD.62.114503,
+  title = {Casimir scaling of $\mathrm{SU}(3)$ static potentials},
+  author = {Bali, Gunnar Singh},
+  journal = {Phys. Rev. D},
+  volume = {62},
+  issue = {11},
+  pages = {114503},
+  numpages = {11},
+  year = {2000},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.62.114503},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.62.114503}
+}
+
+@article{PhysRevD.31.2910,
+  title = {Flux-tube model for hadrons in QCD},
+  author = {Isgur, Nathan and Paton, Jack},
+  journal = {Phys. Rev. D},
+  volume = {31},
+  issue = {11},
+  pages = {2910--2929},
+  numpages = {0},
+  year = {1985},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.31.2910},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.31.2910}
+}
+
+@article{Gao:2018xsg,
+      author         = "Gao, Fei and Chen, Chong-Yao and Liu, Yu-Xin",
+      title          = "{Colour Confinement: a Dynamical Phenomenon of QCD}",
+      year           = "2018",
+      eprint         = "1802.08184",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1802.08184;%%"
+}
+
+@article{KOGUT1976199,
+title = "A quantitative approach to low-energy quantum chromodynamics",
+journal = "Nuclear Physics B",
+volume = "114",
+number = "2",
+pages = "199 - 236",
+year = "1976",
+issn = "0550-3213",
+doi = "https://doi.org/10.1016/0550-3213(76)90586-1",
+url = "http://www.sciencedirect.com/science/article/pii/0550321376905861",
+author = "John Kogut and D.K. Sinclair and Leonard Susskind",
+}
+
+@article{BUCHMULLER1982479,
+title = "Fine- and hyperfine structure of quarkonia",
+journal = "Physics Letters B",
+volume = "112",
+number = "6",
+pages = "479 - 483",
+year = "1982",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(82)90854-1",
+url = "http://www.sciencedirect.com/science/article/pii/0370269382908541",
+author = "W. Buchmuller",
+}
+
+
+@article{RevModPhys.55.775,
+  title = {The lattice gauge theory approach to quantum chromodynamics},
+  author = {Kogut, John B.},
+  journal = {Rev. Mod. Phys.},
+  volume = {55},
+  issue = {3},
+  pages = {775--836},
+  numpages = {0},
+  year = {1983},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.55.775},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.55.775}
+}
+
+
+@article{PhysRevLett.90.102001,
+  title = {No Confinement without Coulomb Confinement},
+  author = {Zwanziger, Daniel},
+  journal = {Phys. Rev. Lett.},
+  volume = {90},
+  issue = {10},
+  pages = {102001},
+  numpages = {4},
+  year = {2003},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.90.102001},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.90.102001}
+}
+
+
+
+@article{PhysRevD.10.2445,
+  title = {Confinement of quarks},
+  author = {Wilson, Kenneth G.},
+  journal = {Phys. Rev. D},
+  volume = {10},
+  issue = {8},
+  pages = {2445--2459},
+  numpages = {0},
+  year = {1974},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.10.2445},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.10.2445}
+}
+
+
+
+@Article{Nishijima1996,
+author="Nishijima, K.",
+title="BRS invariance, asymptotic freedom and color confinement (a review)",
+journal="Czechoslovak Journal of Physics",
+year="1996",
+month="Jan",
+day="01",
+volume="46",
+number="1",
+pages="1--40",
+issn="1572-9486",
+doi="10.1007/BF01692238",
+url="https://doi.org/10.1007/BF01692238"
+}
+
+
+
+@article{PhysRev.179.1547,
+  title = {Asymptotic Sum Rules at Infinite Momentum},
+  author = {Bjorken, J. D.},
+  journal = {Phys. Rev.},
+  volume = {179},
+  issue = {5},
+  pages = {1547--1553},
+  numpages = {0},
+  year = {1969},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.179.1547},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.179.1547}
+}
+
+
+@article{PhysRevLett.30.1343,
+  title = {Ultraviolet Behavior of Non-Abelian Gauge Theories},
+  author = {Gross, David J. and Wilczek, Frank},
+  journal = {Phys. Rev. Lett.},
+  volume = {30},
+  issue = {26},
+  pages = {1343--1346},
+  numpages = {0},
+  year = {1973},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.30.1343},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.30.1343}
+}
+
+@article{PhysRevD.8.3633,
+  title = {Asymptotically Free Gauge Theories. I},
+  author = {Gross, David J. and Wilczek, Frank},
+  journal = {Phys. Rev. D},
+  volume = {8},
+  issue = {10},
+  pages = {3633--3652},
+  numpages = {0},
+  year = {1973},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.8.3633},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.8.3633}
+}
+
+
+@article{PhysRevLett.23.935,
+  title = {Observed Behavior of Highly Inelastic Electron-Proton Scattering},
+  author = {Breidenbach, M. and Friedman, J. I. and Kendall, H. W. and Bloom, E. D. and Coward, D. H. and DeStaebler, H. and Drees, J. and Mo, L. W. and Taylor, R. E.},
+  journal = {Phys. Rev. Lett.},
+  volume = {23},
+  issue = {16},
+  pages = {935--939},
+  numpages = {0},
+  year = {1969},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.23.935},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.23.935}
+}
+
+
+
+@article{PhysRevLett.23.930, 
+  title = {High-Energy Inelastic $e-p$ Scattering at $6^{\circ}$ and $10^{\circ}$},
+  author = {Bloom, E. D. and Coward, D. H. and DeStaebler, H. and Drees, J. and Miller, G. and Mo, L. W. and Taylor, R. E. and Breidenbach, M. and Friedman, J. I. and Hartmann, G. C. and Kendall, H. W.},
+  journal = {Phys. Rev. Lett.},
+  volume = {23},
+  issue = {16},
+  pages = {930--934},
+  numpages = {0},
+  year = {1969},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.23.930},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.23.930}
+}
+
+
+
+@article{SMpict,
+      author         = "{Wikimedia Commons}",
+      title          = "{Standard Model of Elementary Particles}",
+      year           = "2006",
+      url = "https://en.wikipedia.org/wiki/Standard_Model",
+      }
+
+
 @article{RUSNAK:2014xfa,
       author         = "Rusnak, Jan",
       title          = "{Inclusive spectrum of charged jets in central Au+Au
@@ -2955,6 +3488,15 @@ SLACcitation   = "%%CITATION = ATLAS-CONF-2013-083;%%"
 @unpublished{brian_note,
       title        =  "{Private discussion with Brian Cole}",
 }
+
+
+@online{MillenniumProb,
+	Author = {Jaffe, Arthur and Witten, Edward},
+	Title = {Yang-Mills and Mass Gap},
+	note = {http://www.claymath.org/millennium-problems/yang–mills-and-mass-gap},
+	nourldate = {2019-06-20},
+}
+
 
 @online{JERTool,
 	Author = {Varouchas, Dimitri},
