--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -67,8 +67,24 @@
 \setcounter{page}{2}
 \begin{abstract}
 
-Studies of the fragmentation of jets into charged particles in heavy-ion collisions can help in understanding the mechanism of jet quenching by the hot and dense matter created in such collisions, the quark-gluon plasma. This thesis presents a measurement of the angular distribution of charged particles around the jet axis as measured in \pbpb\ and \pp\ collisions collided at a center of mass energy of $\sqrt{s_{\mathrm{NN}}}=$~5.02~\TeV. The measurement is done using the ATLAS detector at the Large Hadron Collider, and utilizes 0.49 \pb\ of \pbpb\ and 25 \pb\ of \pp\ data collected in 2015. The measurement is performed for jets reconstructed with the \antikt\ algorithm with radius parameter $R = $~0.4, and is extended to regions outside the jet cone. Results are presented as a function of \pbpb\ collision centrality, and both jet and charged-particle transverse momenta. It was observed that in \pbpb\ collisions there is a broadening of the jet for charged particles with \mbox{$\pt < 4$ \GeV}, along with a narrowing for  charged particles with $\pt > 4$ \GeV. Ratios between the angular distributions in \pbpb\ and \pp\ showed an enhancement for particles with $\pt < 4$ \GeV\ in \pbpb\ collisions, with the enhancement increasing up to 2 for \mbox{$\rvar < 0.3$}, and remaining constant for \mbox{$0.3 < \rvar < 0.6$}. Charged particles with $\pt\ > 4$ \GeV\ show a small enhancement in the jet core for $\rvar < 0.05$, with a growing suppression of up to 0.5 for \mbox{$\rvar < 0.3$} in \pbpb\ collisions. The depletion remains constant for \mbox{$0.3 < \rvar < 0.6$}.
+Heavy ion collision experiments have been centered around studying the extreme state of matter formed in such collisions, the quark-gluon plasma. There have been efforts to measure and characterize this state of matter for almost two decades, first at the Relativistic Heavy Ion Collider and subsequently at the Large Hadron Collider. While there have been different approaches to study it, correlated particle showers called jets have found a special place as a probe of the QGP. Arising from highly energetic collisions between partons, jets are formed early enough in heavy ion collisions that they experience the formation of the QGP and its evolution. They are modified from what they would be in a vacuum, and studying these modifications can give insight into the properties of the QGP as well as the strong interaction.
+
+Jet measurements can focus on a variety of observables like yields, momenta, or fragmentation patterns, each with its own limitations and advantages. This thesis presents a measurement of the angular distribution of charged particles around the jet axis as measured by the ATLAS detector for \pbpb\ and \pp\ collisions with a center of mass energy of $\sqrt{s_{\mathrm{NN}}}=$~5.02~TeV. Comparing the measurement in the two  systems shows that charged particles carrying a transverse momenta \pt\ of less than 4 GeV have a broader distribution in \pbpb\ collisions, while those with $\pt > 4$ GeV have a narrower distribution. Furthermore, there is an enhancement for particles with $\pt < 4$ GeV in \pbpb\ collisions, with the enhancement increasing up to 2 for \mbox{$\rvar < 0.3$} from the jet axis, and remaining constant for \mbox{$0.3 < \rvar < 0.6$}. Charged particles with $\pt\ > 4$ \GeV\ show a small enhancement in the jet core for $\rvar < 0.05$, and are increasingly suppressed up to 0.5 for \mbox{$\rvar < 0.3$}. This depletion remains constant for \mbox{$0.3 < \rvar < 0.6$}.
+
 \end{abstract}
+
+
+%The Large Hadron Collider (LHC) at the European Center for Nuclear Research (CERN) has been at the forefront of research in the field of heavy ion physics, and has provided unprecedented access to study the Quark Gluon Plasma (QGP). It was built with the purpose of accelerating subatomic particles close to the speed of light and colliding them to study their underlying structure. Detectors around the LHC ring, the biggest of which are  ATLAS (A Toroidal LHC ApparatuS), CMS (Compact Muon Solenoid), ALICE (A Large Ion-Collider Experiment), and LHCb (LHC-Beauty), study these collisions and use the debris as a playground to verify and expand the ``Standard Model'' of particle physics. This thesis will focus on measurements of collisions involving heavy ions as measured by the ATLAS detector.
+
+%Relativistic heavy ion collisions such as those at the LHC provide insight into the interactions between quarks and gluons. These fundamental building blocks of all matter interact via the strong force, the theoretical framework of which is described by Quantum Chromodynamics (QCD). This theory dictates that quarks and gluons are confined, i.e. locked together to form composite particles and cannot exist independently, making their study extremely difficult. Relativistic heavy ion collisions provide an extreme environment where nuclear matter can "melt" and form a deconfined medium that consists of free quarks and gluons. This state of matter, called the Quark Gluon Plasma (QGP) is what existed a few microseconds after the Big Bang, and is what eventually cooled and expanded to form the existing universe. It
+
+%The quark-gluon plasma (see Refs.~\cite{Roland:2014jsa,Busza:2018rrf} for recent reviews) can be probed by jets, sprays of particles that come from hard scattering processes between the nucleons involved in the collision. These jets are produced early in the collision and interact with the QGP as they make their way to the detector. Studying the rates and characteristics of these jets in \pbpb\ collisions, and comparing them to similar quantities in \pp\ collisions can provide information on the properties of the QGP. In particular, studying the  fragmentation pattern of these jets and how the energy is distributed around the jet axis can provide more information on the jet structure and put constraints on the medium response to the jet.
+
+%This thesis is split into 4 main chapters. Chapter~\ref{sec:theory} briefly describes the general theoretical background on QCD, heavy ion collisions, QGP, and jets, giving context to the measurements discussed in this thesis. Chapter~\ref{sec:jetMeasurements} will briefly discuss major jet measurements done by the ATLAS Heavy Ion Group. Chapter~\ref{sec:setup} gives an overview of the LHC and the ATLAS detector. Chapter~\ref{sec:qualification} will describe the work undertaken to become a member of the ATLAS Collaboration, and Chapter~\ref{sec:mainanalysis} will provide a detailed description of the measurement to determine the angular distributions of charged particles in \pbpb\ and \pp\ collisions. 
+
+
+
+
 
 % Create a dedication in italics with no heading, centered vertically
 % on the page.
@@ -120,11 +136,11 @@ For my Mother, Father, and Brother
 %\chapter{Introduction}
 %\label{sec:intro}
 %\input{thesisintro.tex}
-%
-%\chapter{Theoretical Introduction}
-%\label{sec:theory}
-%\input{theory.tex}
-%\clearpage
+
+\chapter{Introduction}
+\label{sec:theory}
+\input{theory.tex}
+\clearpage
 
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
