--- a/thesisintro.tex
+++ b/thesisintro.tex
@@ -1,8 +1,7 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
 
-
-The Large Hadron Collider (LHC) at the European Center for Nuclear Research (CERN), is one of the worlds most expensive and complicated machines. It was built with the purpose of accelerating subatomic particles to close to the speed of light and colliding them to study their underlying structure. Detectors around the LHC ring, the biggest of which are  ATLAS (A Toroidal LHC ApparatuS), CMS (Compact Muon Solenoid), ALICE (A Large Ion-Collider Experiment), and LHCb (LHC-Beauty), study these collisions and use the debris as a playground to verify and expand the "Standard Model" of particle physics. This thesis will focus on measurements of collisions involving heavy ions as measured by the ATLAS detector.
+The Large Hadron Collider (LHC) at the European Center for Nuclear Research (CERN) has been at the forefront of research in the field of heavy ion physics, and has provided unprecedented access to study the Quark Gluon Plasma (QGP). It was built with the purpose of accelerating subatomic particles close to the speed of light and colliding them to study their underlying structure. Detectors around the LHC ring, the biggest of which are  ATLAS (A Toroidal LHC ApparatuS), CMS (Compact Muon Solenoid), ALICE (A Large Ion-Collider Experiment), and LHCb (LHC-Beauty), study these collisions and use the debris as a playground to verify and expand the ``Standard Model'' of particle physics. This thesis will focus on measurements of collisions involving heavy ions as measured by the ATLAS detector.
 
 Relativistic heavy ion collisions such as those at the LHC provide insight into the interactions between quarks and gluons. These fundamental building blocks of all matter interact via the strong force, the theoretical framework of which is described by Quantum Chromodynamics (QCD). This theory dictates that quarks and gluons are confined, i.e. locked together to form composite particles and cannot exist independently, making their study extremely difficult. Relativistic heavy ion collisions provide an extreme environment where nuclear matter can "melt" and form a deconfined medium that consists of free quarks and gluons. This state of matter, called the Quark Gluon Plasma (QGP) is what existed a few microseconds after the Big Bang, and is what eventually cooled and expanded to form the existing universe. It
 
