--- a/theory.tex
+++ b/theory.tex
@@ -1,17 +1,18 @@
 % !TEX root = thesis-ex.tex
 This section shall discuss the theoretical background necessary to understand jet measurements. It will discuss the fundamentals of quantum chromodynamics (QCD), the heavy ion collision system and the quark gluon plasma that is formed, and finally jets and jet energy loss. 
 
+remove Refs.~\cite{Roland:2014jsa} .
 \section{Quantum Chromodynamics}
 \label{sec:qcd}
 \input{qcd.tex}
-\
+
+\section{Quark-Gluon Plasma}
+\label{sec:qgp}
+\input{qgp.tex}
+
 \section{Heavy Ion Collisions}
 \label{sec:HICollisions}
 \input{hicollisions.tex}
-
-\section{Quark Gluon Plasma}
-\label{sec:qgp}
-\input{qgp.tex}
 
 \section{Jets and Jet Quenching}
 \label{sec:jets}
